common/network-types/src/snapshots/hopr_network_types__utils__tests__async_read_streamer_complete_chunk.snap
---
source: common/network-types/src/utils.rs
expression: chunks_as_strings(&results)
---
- "Hello, World!!"
