common/network-types/src/snapshots/hopr_network_types__utils__tests__async_read_streamer_complete_more_chunks.snap
---
source: common/network-types/src/utils.rs
expression: chunks_as_strings(&results)
---
- "Hello, World a"
- nd do it twice
