common/network-types/src/snapshots/hopr_network_types__utils__tests__async_read_streamer_incomplete_chunk.snap
---
source: common/network-types/src/utils.rs
expression: "result.map(|c| String::from_utf8_lossy(&c).into_owned())"
---
"Hello, W"
