common/network-types/src/snapshots/hopr_network_types__utils__tests__async_write_sink_should_perform_write_in_chunks.snap
---
source: common/network-types/src/utils.rs
expression: chunks_as_strings(&rx_data)
---
- "Hello, "
- World!!
